# opencv-test

./: .gitignore  README.md  pyproject.toml
openCV_test/: functions.py  globals.py  start.bat  start.py
