[tool.poetry]
name = "openCV-test"
version = "0.1.0"
description = ""
authors = ["Domagoj Zubac <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keyboard = "^0.13.5"
opencv-python-headless = "^4.7.0.68"
mss = "^7.0.1"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
